--- a/assets/scss/_tablet.scss
+++ b/assets/scss/_tablet.scss
@@ -268,7 +268,9 @@ article.entry-snippet {
   }
 }
 
-
+.blog-entry .fullwidth:first-of-type {
+  margin-top: 0;
+}
 
 /* ===============================
 /* ===============================
